[gd_scene load_steps=9 format=3 uid="uid://0g20y50453yu"]

[ext_resource type="Script" path="res://enemy.gd" id="1_a2wfp"]
[ext_resource type="Texture2D" uid="uid://wir8de07oju2" path="res://Assets/BlackRabite.png" id="1_rypgm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n6v2s"]
radius = 49.163

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5p7"]
atlas = ExtResource("1_rypgm")
region = Rect2(55, 25, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdjd5"]
atlas = ExtResource("1_rypgm")
region = Rect2(78, 25, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ajav"]
atlas = ExtResource("1_rypgm")
region = Rect2(101, 25, 23, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixw5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdjd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ajav")
}],
"loop": true,
"name": &"enemyIdle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5mngv"]
radius = 22.8254

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_a2wfp")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_n6v2s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ixw5e")
animation = &"enemyIdle"
frame_progress = 0.0280383

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_5mngv")

[node name="enemy_invulnerability_timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="enemy_invulnerability_timer" to="." method="_on_enemy_invulnerability_timer_timeout"]
